Update to 1.21 and fix client entity selector